<resources>
    <string name="app_name">mpasho_lms_news</string>
    <string name="app_headline">Mpasho News Headlines</string>
    <string name="title">Title</string>
    <string name="description">Desc</string>
    <string name="source">Source</string>
    <string name="time">Time</string>
    <string name="author">Author</string>
    <string name="date">01 January 1990</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="open_with_browser">Open with browser</string>
    <string name="error_string">image representing errors</string>
    <string name="error_title">Error Title</string>
    <string name="error_message">Error Message</string>
    <string name="retry">Retry</string>
    <string name="error_404">404 not found</string>
    <string name="error_500">500 server broken</string>
    <string name="error_unknown">unknown error</string>
    <string name="try_again">Please Try Again!\n</string>
    <string name="no_result">No Result</string>
    <string name="oops">Oops..</string>
    <string name="error_network_failure">Network failure, Please Try Again</string>
    <string name="sahre_from">Share from the News App</string>
    <string name="share_with">Share with :</string>
    <string name="cannot_share">Hmm.. Sorry,  \\nCannot be shared</string>
</resources>
